syntax ="proto3";

package go.micro.svr.consignment;

service ShippingService {
    rpc CreateConsignment() returns() {

    }
    rpc GetAll()returns() {
        
    }
}